@@ -144,18 +144,6 @@ name|TreeSet
 import|;
 end_import
 
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|ConcurrentHashMap
-import|;
-end_import
-
 begin_class
 DECL|class|SolrCores
 class|class
@@ -235,21 +223,6 @@ name|createdCores
 init|=
 operator|new
 name|LinkedHashMap
-argument_list|<>
-argument_list|()
-decl_stmt|;
-DECL|field|coreToOrigName
-specifier|private
-name|Map
-argument_list|<
-name|SolrCore
-argument_list|,
-name|String
-argument_list|>
-name|coreToOrigName
-init|=
-operator|new
-name|ConcurrentHashMap
 argument_list|<>
 argument_list|()
 decl_stmt|;
@@ -1159,9 +1132,6 @@ name|remove
 parameter_list|(
 name|String
 name|name
-parameter_list|,
-name|boolean
-name|removeOrig
 parameter_list|)
 block|{
 synchronized|synchronized
@@ -1184,23 +1154,6 @@ name|ret
 init|=
 literal|null
 decl_stmt|;
-if|if
-condition|(
-name|removeOrig
-operator|&&
-name|tmp
-operator|!=
-literal|null
-condition|)
-block|{
-name|coreToOrigName
-operator|.
-name|remove
-argument_list|(
-name|tmp
-argument_list|)
-expr_stmt|;
-block|}
 name|ret
 operator|=
 operator|(
@@ -1267,80 +1220,6 @@ expr_stmt|;
 return|return
 name|ret
 return|;
-block|}
-block|}
-DECL|method|putCoreToOrigName
-specifier|protected
-name|void
-name|putCoreToOrigName
-parameter_list|(
-name|SolrCore
-name|c
-parameter_list|,
-name|String
-name|name
-parameter_list|)
-block|{
-synchronized|synchronized
-init|(
-name|modifyLock
-init|)
-block|{
-name|coreToOrigName
-operator|.
-name|put
-argument_list|(
-name|c
-argument_list|,
-name|name
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-DECL|method|removeCoreToOrigName
-specifier|protected
-name|void
-name|removeCoreToOrigName
-parameter_list|(
-name|SolrCore
-name|newCore
-parameter_list|,
-name|SolrCore
-name|core
-parameter_list|)
-block|{
-synchronized|synchronized
-init|(
-name|modifyLock
-init|)
-block|{
-name|String
-name|origName
-init|=
-name|coreToOrigName
-operator|.
-name|remove
-argument_list|(
-name|core
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|origName
-operator|!=
-literal|null
-condition|)
-block|{
-name|coreToOrigName
-operator|.
-name|put
-argument_list|(
-name|newCore
-argument_list|,
-name|origName
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 block|}
 comment|/* If you don't increment the reference count, someone could close the core before you use it. */
@@ -1599,30 +1478,6 @@ argument_list|(
 name|cname
 argument_list|,
 name|desc
-argument_list|)
-return|;
-block|}
-block|}
-DECL|method|getCoreToOrigName
-specifier|protected
-name|String
-name|getCoreToOrigName
-parameter_list|(
-name|SolrCore
-name|solrCore
-parameter_list|)
-block|{
-synchronized|synchronized
-init|(
-name|modifyLock
-init|)
-block|{
-return|return
-name|coreToOrigName
-operator|.
-name|get
-argument_list|(
-name|solrCore
 argument_list|)
 return|;
 block|}
